hard-gists/5773979/run.log
=== Docker Run Log for 5773979 ===
Started at: Mi 29. Okt 15:57:15 CET 2025

[2025-10-29 15:57:16] START: Running container for 5773979
[2025-10-29 15:57:16] SUCCESS: Container 1b2bb2b3376ae290c1d5e2daf836e8bb92ff5d96de8a9dd8a73b63ce29591e1b started for 5773979
=== Container logs for 5773979 ===
  File "/snippet.py", line 15
    print "Time : %r s, Memory : %r Kb" % (time.clock()-t,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5773979 ===
[2025-10-29 15:57:18] INFO: Container 1b2bb2b3376ae290c1d5e2daf836e8bb92ff5d96de8a9dd8a73b63ce29591e1b has stopped
